@@ -1,1 +1,5 @@
 # Der-Geraet
+
+
+
+--add-opens=Der.Geraet.Maven/com.example=ALL-UNNAMED --add-reads Der.Geraet.Maven=ALL-UNNAMED
